# thesis-data-toolbox

./: .gitignore  pyproject.toml  requirements.txt
src/tdtb/: main.py
src/tdtb/TODO/: spikeamp.py  spikecorr.py  spikewave.py
src/tdtb/commands/: addtasks.py  alltasks.py  parsesort.py  procrec.py  searchks.py  searchms.py  unittables.py
src/tdtb/functions/: extract_rec_object.py  filter_task_table.py  get_chan_traces.py  get_sort_score.py  get_trial_frames.py  get_trial_spikes.py  get_unit_rasters.py  get_unit_waveforms.py  run_kilosort.py  run_mountainsort.py  run_sort_analyzer.py  whiten_rec_object.py
